# lauzhackhw

./: README.md  inference.py  pyproject.toml
src/configs/: baseline.yaml  inference.yaml
src/configs/datasets/: asvspoof.yaml
src/configs/metrics/: ce_eer.yaml
src/configs/model/: lightcnn.yaml
src/configs/transforms/: trimpad.yaml
src/configs/transforms/instance_transforms/: trimpad.yaml
src/configs/writer/: wandb.yaml
src/datasets/: ASVSpoof.py  __init__.py  base_dataset.py  collate.py
src/metrics/: __init__.py  base_metric.py  eer.py
src/model/: __init__.py  chain.py  lightcnn.py  stft_delta_frontend.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py  padtrim.py
src/utils/: init_utils.py
