[project]
name = "dl-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergei",email = "sergmish.c@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "torchmetrics (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
